# tat-agent

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_COMMIT.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.multi-stage  LICENSE  Make.bat  Makefile  README-ZH.md  README.md  build.rs  zh-cn.md
.github/workflows/: check.yml  release.yml
install/: build.bat  init_install.ps1  init_install.sh  install.bat  install.sh  release.bat  release.sh  self_update.bat  self_update.sh  stop.bat  tat_agent.service  tat_agent_service  tat_agent_service.conf  time.sh  uninstall.bat  uninstall.sh  winutil.ps1
misc/: bash-init.sh  bash-preexec.sh
src/: common.rs  cos.rs  daemonizer.rs  executor.rs  http.rs  lib.rs  main.rs  ontime.rs  types.rs  uname.rs
src/common/: asserts.rs  config.rs  consts.rs  envs.rs  evbus.rs  logger.rs  mod.rs  option.rs  strwsz.rs  sysinfo.rs  utils.rs
src/common/daemonizer/: mod.rs  unix.rs  windows.rs
src/common/sysinfo/: unix.rs  windows.rs
src/conpty/: file.rs  gather.rs  handler.rs  mod.rs  parser.rs  proxy.rs  pty.rs  ptybin.rs  session.rs  thread.rs  unix.rs  windows.rs
src/conpty/pty/: bind.rs  mod.rs  parser.rs  unix.rs  windows.rs
src/cos/: auth.rs  client.rs  errors.rs  object.rs  utils.rs
src/daemonizer/: mod.rs  unix.rs  windows.rs
src/executor/: mod.rs  powershell_command.rs  proc.rs  shell_command.rs  store.rs  task.rs  thread.rs  unix.rs  windows.rs
src/http/: invoke_adapter.rs  metadata_adapter.rs  mod.rs  requester.rs  store.rs  thread.rs
src/network/: cos_adapter.rs  invoke_adapter.rs  metadata_adapter.rs  mod.rs  requester.rs  urls.rs  ws.rs
src/network/adapter/: cos_adapter.rs  invoke_adapter.rs  metadata_adapter.rs
src/network/cos/: auth.rs  client.rs  errors.rs  object.rs  utils.rs
src/network/types/: error.rs  http_msg.rs  http_req.rs  mod.rs  ws_msg.rs
src/ontime/: leak_check.rs  mod.rs  self_update.rs  thread.rs  timer.rs
src/sysinfo/: mod.rs  unix.rs  windows.rs
src/tssh/: file.rs  handler.rs  mod.rs  proxy.rs  session.rs
src/tssh/pty/: bind.rs  mod.rs  parser.rs  unix.rs  windows.rs
src/types/: common.rs  error.rs  inner_msg.rs  metadata.rs  mod.rs  task.rs  ws_msg.rs
src/uname/: common.rs  mod.rs  unix.rs  windows.rs
src/ws/: thread.rs
tests/: http_test.rs  package.json  pty-vscode-server.js  pty.html
tests/support/: mod.rs  response.rs  server.rs
