[package]
name = "tat_agent"
version = "1.0.6"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "0.2.22", features = ["full"]}
tokio01 = { version = "0.1.22", package = "tokio"}
futures01 = { version = "0.1", package = "futures"}
reqwest = { version = "0.10", features = ["blocking", "json", "stream"] }
websocket = "0.26.2"
bytes = "0.5.6"
# tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
# tokio-stream = "0.1.14"
# tokio = { version = "1.28.2", features = ["process", "rt", "macros"] }
# reqwest = { version = "0.11.18", features = ["blocking", "json", "stream"] }
# bytes = "1.4.0"
futures = "0.3.28"
tokio-test = "0.4.2"
serde_json = "1.0.57"
serde_bytes = "0.11.7"
serde_ini = "0.2.0"
serde = { version = "1.0.115", features = ["derive"] }
url = "2.1.1"
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.11"
log4rs = "1.2.0"
libc = "0.2.77"
rand = "0.8.5"
base64 = "0.21.2"
chrono = "0.4.18"
md5 = "0.7.0"
unzip = "0.1.0"
hyper = { version = "0.14.26" }
async-trait = "0.1.50"
encoding = "0.2.33"
cfg-if = "1.0"
time = { version = "0.3.21", default-features = false }
faux = "0.1.9"
urlencoding = "2.1.2"
derive_more = "0.99.5"
bson = "2.4.0"
glob = "0.3.0"
ringbuffer = "0.13.0"
smbios-lib = "0.9.0"
rsa = "0.9.2"
hmac = "0.12.1"
sha1 = { version = "0.10.5", default-features = false, features = ["oid"] }
once_cell = "1.16.0"
zip-extract = "0.1.2"
zip-extensions = "0.6.1"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
users = { version = "0.11.0" }
openssl = { version = '0.10.35', features = ["vendored"] }
procfs = "0.15.1"
unix_mode = "0.1.3"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winsvc",
    "winbase",
    "winnt",
    "stringapiset",
    "winnls",
    "wow64apiset",
    "synchapi",
    "namedpipeapi",
    "lmaccess",
    "lmapibuf",
    "sddl",
    "ntlsa",
    "ntsecapi",
    "lsalookup",
    "libloaderapi",
    "errhandlingapi",
    "securitybaseapi",
    "userenv",
    "tlhelp32",
    "psapi",
    "memoryapi",
    "subauth",
] }
codepage-strings = "1.0.2"
ntapi = "0.4.1"
nom = "7.1.1"

[build-dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json", "stream"] }
