[package]
name = "tat_agent"
version = "1.1.3"
edition = "2018"

[dependencies]
tokio = { version = "1.40.0", features = [
  "test-util",
  "rt-multi-thread",
  "process",
  "macros",
] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1.16"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
bytes = "1.7.1"
futures = { version = "0.3.31", default-features = false, features = [
  "std",
  "async-await",
] }
serde_json = "1.0.57"
serde_bytes = "0.11.7"
serde = { version = "1.0.115", features = ["derive"] }
url = "2.1.1"
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.11"
log4rs = { version = "1.3.0", default-features = false, features = [
  "all_components",
] }
libc = "0.2.77"
rand = "0.8.5"
base64 = "0.22.1"
chrono = "0.4.18"
md5 = "0.7.0"
zip = "2.2.0"
cfg-if = "1.0"
urlencoding = "2.1.2"
bson = "2.13.0"
glob = "0.3.0"
ringbuffer = "0.15.0"
smbios-lib = "0.9.0"
rsa = "0.9.6"
hmac = "0.12.1"
sha1 = { version = "0.10.5", default-features = false, features = ["oid"] }
anyhow = "1.0.89"
leaky-bucket = "1.1.2"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
users = { version = "0.11.0" }
openssl = { version = '0.10.66', features = ["vendored"] }
procfs = "0.15.1"
unix_mode = "0.1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
  "std",
  "sysinfoapi",
  "winsvc",
  "winbase",
  "winnt",
  "stringapiset",
  "winnls",
  "wow64apiset",
  "synchapi",
  "namedpipeapi",
  "lmaccess",
  "lmapibuf",
  "sddl",
  "ntlsa",
  "ntsecapi",
  "lsalookup",
  "libloaderapi",
  "errhandlingapi",
  "securitybaseapi",
  "userenv",
  "tlhelp32",
  "psapi",
  "memoryapi",
  "subauth",
  "winsock2",
  "winreg",
] }
codepage-strings = "1.0.2"
ntapi = "0.4.1"
nom = "7.1.1"
zip-extract = "0.2.1"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
